Prevent weird scrollbars and overflow on sidebar

--- a/src/components/templates/templates.module.css
+++ b/src/components/templates/templates.module.css
@@ -24,6 +24,7 @@
   height: var(--body-height);
   padding: var(--spacing-md);
   width: 175px;
+  overflow-y: auto;
 }
 
 @media screen and (min-width: 400px) {
